[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Player/Player8.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/Player2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Player1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Player6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Player4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Player5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Player3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Player7.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=9]
[ext_resource path="res://Sounds/Captured.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/Attack.wav" type="AudioStream" id=12]
[ext_resource path="res://Font/orange kid.ttf" type="DynamicFontData" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 4.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Jump-Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ) ],
"loop": true,
"name": "Captured",
"speed": 2.5
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 32 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 13 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.65, 0.65 )
smoothing_enabled = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 38, 14 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="FPS" type="RichTextLabel" parent="UI"]
margin_left = 10.0
margin_right = 431.0
margin_bottom = 52.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "FPS: "

[node name="CapturedTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="CapturedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="CapturedTimer" to="." method="_on_CapturedTimer_timeout"]
